--- a/package.json
+++ b/package.json
@@ -8,8 +8,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "postcss": "^8.4.38",
-    "postcss-pxtorem": "^6.1.0",
     "vant": "^4.9.0",
     "vue": "^3.4.21"
   },
@@ -17,6 +15,7 @@
     "@types/node": "^20.12.12",
     "@vant/auto-import-resolver": "^1.2.1",
     "@vitejs/plugin-vue": "^5.0.4",
+    "postcss-px-to-viewport": "^1.1.1",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-vue-components": "^0.27.0",
