--- a/package.json
+++ b/package.json
@@ -1,57 +1,63 @@
 {
-  "name": "map-h5",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc && vite build",
-    "preview": "vite preview",
-    "lint:eslint": "eslint --cache --max-warnings 0 \"{src,mock,build}/**/*.{vue,js,ts,tsx}\" --fix",
-    "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,scss,vue,html,md}\""
-  },
-  "dependencies": {
-    "vant": "^4.9.0",
-    "vue": "^3.4.21"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.3.0",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/eslint-plugin": "^7.11.0",
-    "@typescript-eslint/parser": "^7.11.0",
-    "@vant/auto-import-resolver": "^1.2.1",
-    "@vitejs/plugin-vue": "^5.0.4",
-    "eslint": "^9.3.0",
-    "eslint-define-config": "^2.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.26.0",
-    "postcss-px-to-viewport": "^1.1.1",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.2",
-    "typescript": "^5.2.2",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-vue-components": "^0.27.0",
-    "vite": "^5.2.0",
-    "vue-eslint-parser": "^9.4.2",
-    "vue-tsc": "^2.0.6"
-  },
-  "engines": {
-    "node": "^18.18.0 || ^20.9.0 || >=21.1.0",
-    "pnpm": ">=9"
-  },
-  "pnpm": {
-    "allowedDeprecatedVersions": {
-      "sourcemap-codec": "*",
-      "domexception": "*",
-      "w3c-hr-time": "*",
-      "stable": "*",
-      "abab": "*"
+    "name": "map-h5",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vue-tsc && vite build",
+        "preview": "vite preview",
+        "lint:eslint": "eslint --cache --max-warnings 0 \"{src,mock,build}/**/*.{vue,js,ts,tsx}\" --fix",
+        "lint:prettier": "prettier --write \"src/**/*.{js,ts,json,tsx,css,scss,vue,html,md}\"",
+        "prepare": "husky"
     },
-    "peerDependencyRules": {
-      "allowedVersions": {
-        "eslint": "9"
-      }
-    }
-  },
-  "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
+    "dependencies": {
+        "vant": "^4.9.0",
+        "vue": "^3.4.21"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^19.3.0",
+        "@commitlint/config-conventional": "^19.2.2",
+        "@commitlint/types": "^19.0.3",
+        "@eslint/js": "^9.3.0",
+        "@types/node": "^20.12.12",
+        "@typescript-eslint/eslint-plugin": "^7.11.0",
+        "@typescript-eslint/parser": "^7.11.0",
+        "@vant/auto-import-resolver": "^1.2.1",
+        "@vitejs/plugin-vue": "^5.0.4",
+        "eslint": "^9.3.0",
+        "eslint-define-config": "^2.1.0",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-vue": "^9.26.0",
+        "husky": "^9.0.11",
+        "lint-staged": "^15.2.5",
+        "postcss-px-to-viewport": "^1.1.1",
+        "prettier": "^3.2.5",
+        "sass": "^1.77.2",
+        "typescript": "^5.2.2",
+        "unplugin-auto-import": "^0.17.6",
+        "unplugin-vue-components": "^0.27.0",
+        "vite": "^5.2.0",
+        "vue-eslint-parser": "^9.4.2",
+        "vue-tsc": "^2.0.6"
+    },
+    "engines": {
+        "node": "^18.18.0 || ^20.9.0 || >=21.1.0",
+        "pnpm": ">=9"
+    },
+    "pnpm": {
+        "allowedDeprecatedVersions": {
+            "sourcemap-codec": "*",
+            "domexception": "*",
+            "w3c-hr-time": "*",
+            "stable": "*",
+            "abab": "*"
+        },
+        "peerDependencyRules": {
+            "allowedVersions": {
+                "eslint": "9"
+            }
+        }
+    },
+    "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
