--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@typescript-eslint/parser": "^7.11.0",
         "@vant/auto-import-resolver": "^1.2.1",
         "@vitejs/plugin-vue": "^5.0.4",
+        "autoprefixer": "^10.4.19",
         "eslint": "^9.3.0",
         "eslint-define-config": "^2.1.0",
         "eslint-plugin-prettier": "^5.1.3",
